# discidium

./: Cargo.toml
src/: lib.rs
src/client/: context.rs  mod.rs  run.rs
src/events/: delegate.rs  mod.rs  payload.rs
src/events/dispatch/: channel.rs  guild.rs  message.rs  mod.rs
src/gateway/: mod.rs  shard.rs
src/gateway/connector/: mod.rs  ws.rs
src/http/: mod.rs  request.rs  route.rs
src/models/: channel.rs  gateway.rs  guild.rs  mod.rs
src/models/channel/: mod.rs  text.rs
src/models/channel/message/: mod.rs
src/models/guild/: mod.rs
src/store/: memory.rs  mod.rs  multiplex.rs
src/util/: error.rs  futures.rs  mod.rs
