[package]
name = "discidium"
version = "0.1.0"
authors = ["aemino <aeminodev@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.30"
anyhow = "1.0.28"
async-tungstenite = { version = "0.4.2", features = ["tokio-runtime", "tokio-tls"] }
flate2 = "1.0.14"
futures = "0.3.4"
http = "0.2.1"
hyper = "0.13.5"
hyper-tls = "0.4.1"
log = "0.4.8"
regex = "1.3.7"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_repr = "0.1.5"
serde_urlencoded = "0.6.1"
thiserror = "1.0.15"
tokio = { version = "0.2.18", features = ["macros"] }
url = "2.1.1"

[dev-dependencies]
fern = "0.6.0"
