[package]
name = "discidium"
version = "0.1.0"
authors = ["aemino <aeminodev@gmail.com>"]
edition = "2018"
homepage = "https://github.com/aemino/discidium"

[dependencies]
async-trait = "0.1.42"
anyhow = "1.0.38"
async-tungstenite = { version = "0.12.0", features = ["tokio-runtime", "tokio-rustls"] }
flate2 = "1.0.20"
futures = "0.3.12"
http = "0.2.3"
hyper = { version = "0.14.4", features = ["client", "http2"] }
hyper-tls = "0.5.0"
log = "0.4.14"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
serde_repr = "0.1.6"
serde_urlencoded = "0.7.0"
thiserror = "1.0.23"
tokio = { version = "1.1.1", features = ["macros", "rt", "time"] }
url = "2.2.0"

[dev-dependencies]
fern = "0.6.0"
